--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,6 +8,10 @@
 @import 'stageCard';
 @import 'quiz';
 
+::-webkit-scrollbar {
+  display: none;
+}
+
 body {
   background-image: url('../images/night_battlefield.jpg');
   background-repeat: no-repeat;
